<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.lehigh.cse216.slj222.MainActivity">
    <item
        android:id="@+id/goBack"
        android:title="GO BACK"
        app:showAsAction="always" />
    <item
        android:id="@+id/myName"
        android:title="Default"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:title="Sign out"
        app:showAsAction="always" />
</menu>
